add checkout page, add checkout item component and update cart to use selectors from reselect

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,11 +11,16 @@
     right: 40px;
     z-index: 5;
   
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
     .cart-items {
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow-y: scroll;
+      // overflow: scroll;
     }
   
     button {
