--- a/src/components/form-input/form-input.component.styles.scss
+++ b/src/components/form-input/form-input.component.styles.scss
@@ -4,7 +4,7 @@ $main-color: black;
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $main-color;
+  color: $sub-color;
 }
 
 .group {
@@ -13,7 +13,6 @@ $main-color: black;
 
   .form-input {
     background: none;
-    background-color: white;
     color: $sub-color;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
